Fixing intents overflow in sidepanel

--- a/src/bp/ui-studio/src/web/components/Shared/Interface/style.scss
+++ b/src/bp/ui-studio/src/web/components/Shared/Interface/style.scss
@@ -37,6 +37,7 @@ $status-bar-height: 24px;
   background-color: #fcfcfc;
   height: 100%;
   overflow-y: auto;
+  padding-bottom: 20px;
 }
 
 .sidePanel_hidden {
